# resume

./: .gitignore  README.md  prompts.txt  pyproject.toml
backend/: requirements.txt
backend/core/: adapters.py  admin.py  consumers.py  cv_views.py  models.py  serializers.py  urls.py  views.py
backend/core/latex_templates/: classic_arabic_v1.tex
backend/core/migrations/: 0001_initial.py  0002_latextemplate.py  0003_alter_latextemplate_options_compilejob_cv_data.py  0004_alter_compilejob_options_compilejob_celery_task_id_and_more.py  0005_latextemplate_is_premium.py
backend/core/schemas/: __init__.py  base.py  classic.py  registry.py
backend/core/services/: latex_service.py  openai_service.py
backend/core/tasks/: compile_tasks.py
backend/main/: asgi.py  settings.py  urls.py
backend/scripts/: generate_requirements.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(public)/: layout.tsx  page.tsx
frontend/src/app/(public)/auth/callback/: page.tsx
frontend/src/app/(public)/create/: page.tsx
frontend/src/app/(public)/cv-import/: page.tsx
frontend/src/app/(public)/login/: page.tsx
frontend/src/app/(public)/register/: page.tsx
frontend/src/app/(public)/templates/: page.tsx
frontend/src/app/create/: page.tsx
frontend/src/app/cv-editor/[jobId]/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/cv/: PdfPreview.tsx  PromptForm.tsx  ResumeEditor.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/components/ui/: AnimatedTemplates.tsx  CountUp.tsx  LoadingMessage.tsx  MagicButton.tsx
frontend/src/lib/: api.ts
frontend/src/providers/: QueryProvider.tsx
frontend/src/types/: resume.ts
