[project]
name = "resume"
version = "0.1.0"
description = "Resume and CV Automation Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.16",
    "aiosignal==1.3.2",
    "amqp==5.3.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "arrow==1.4.0",
    "asgiref==3.11.0",
    "asttokens==3.0.0",
    "async-lru==2.0.4",
    "attrs==24.2.0",
    "autobahn==25.11.1",
    "Automat==25.4.16",
    "backoff==2.2.1",
    "bcrypt==4.2.1",
    "beautifulsoup4==4.12.3",
    "billiard==4.2.1",
    "blinker==1.9.0",
    "boto3==1.42.5",
    "botocore==1.42.5",
    "Brotli==1.1.0",
    "build==1.3.0",
    "cachetools==5.5.0",
    "cbor2==5.7.1",
    "celery==5.4.0",
    "certifi==2024.8.30",
    "cffi==2.0.0",
    "channels==4.3.2",
    "charset-normalizer==3.4.0",
    "chroma-hnswlib==0.7.6",
    "chromadb==0.6.3",
    "click==8.1.8",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "cloudpickle==3.1.0",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "comm==0.2.2",
    "constantly==23.10.4",
    "contourpy==1.3.1",
    "cryptography==46.0.3",
    "cycler==0.12.1",
    "daphne==4.2.1",
    "dataclasses-json==0.6.7",
    "debugpy==1.8.7",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "deprecation==2.1.0",
    "dill==0.3.9",
    "distro==1.9.0",
    "dj-database-url==3.0.1",
    "Django==6.0",
    "django-allauth==65.13.1",
    "django-celery-results", # Added requested package
    "django-cors-headers==4.9.0",
    "django-ratelimit==4.1.0",
    "django-redis==6.0.0",
    "djangorestframework==3.16.1",
    "dnspython==2.7.0",
    "docker==7.1.0",
    "docopt==0.6.2",
    "docstring_parser==0.16",
    "durationpy==0.10",
    "email_validator==2.2.0",
    "eventlet==0.40.4",
    "exceptiongroup==1.2.2",
    "executing==2.1.0",
    "fastapi==0.115.5",
    "fastapi-cli==0.0.5",
    "fastjsonschema==2.20.0",
    "filelock==3.20.0",
    "flatbuffers==25.9.23",
    "frozenlist==1.5.0",
    "fsspec==2024.10.0",
    "google-auth==2.36.0",
    "googleapis-common-protos==1.66.0",
    "greenlet==3.3.0",
    "grpcio==1.76.0",
    "h11==0.14.0",
    "h2==4.1.0",
    "hpack==4.0.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.27.2",
    "httpx-sse==0.4.3",
    "huggingface-hub==0.26.5",
    "humanfriendly==10.0",
    "hyperframe==6.0.1",
    "hyperlink==21.0.0",
    "hypothesis==6.118.3",
    "idna==3.10",
    "importlib_metadata==8.5.0",
    "importlib_resources==6.4.5",
    "Incremental==24.11.0",
    "inflect==7.3.1",
    "iniconfig==2.0.0",
    "ipykernel==6.29.5",
    "ipython==9.0.2",
    "ipython_pygments_lexers==1.1.1",
    "isoduration==20.11.0",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "Jinja2==3.1.4",
    "jiter==0.12.0",
    "jmespath==1.0.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter_client==8.6.3",
    "jupyter_core==5.8.1",
    "kombu==5.5.4",
    "kubernetes==32.0.1",
    "langchain==0.3.23",
    "langchain-chroma==0.2.3",
    "langchain-community==0.3.21",
    "langchain-core==0.3.56",
    "langchain-openai==0.3.12",
    "langchain-text-splitters==0.3.8",
    "langsmith==0.3.45",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.3",
    "marshmallow==3.26.1",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mmh3==5.2.0",
    "more-itertools==10.8.0",
    "mpmath==1.3.0",
    "msgpack==1.1.2",
    "multidict==6.7.0",
    "mypy_extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "numpy==2.3.5",
    "oauthlib==3.3.1",
    "onnxruntime==1.23.2",
    "openai==1.109.1",
    "opentelemetry-api==1.39.0",
    "opentelemetry-exporter-otlp-proto-common==1.39.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.39.0",
    "opentelemetry-instrumentation==0.60b0",
    "opentelemetry-instrumentation-asgi==0.60b0",
    "opentelemetry-instrumentation-fastapi==0.60b0",
    "opentelemetry-proto==1.39.0",
    "opentelemetry-sdk==1.39.0",
    "opentelemetry-semantic-conventions==0.60b0",
    "opentelemetry-util-http==0.60b0",
    "orjson==3.11.5",
    "overrides==7.7.0",
    "packaging==24.2",
    "parso==0.8.5",
    "pillow==12.0.0",
    "platformdirs==4.5.1",
    "posthog==7.0.1",
    "prompt_toolkit==3.0.52",
    "propcache==0.4.1",
    "protobuf==5.29.5",
    "psutil==7.1.3",
    "psycopg2-binary==2.9.11",
    "pure_eval==0.2.3",
    "pypdf", # Added requested package (Assuming typo 'pydpf')
    "py-ubjson==0.16.1",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.2",
    "pycparser==2.23",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "pydantic_core==2.41.5",
    "Pygments==2.19.2",
    "PyJWT==2.10.1",
    "pyOpenSSL==25.3.0",
    "PyPika==0.48.9",
    "pyproject_hooks==1.2.0",
    "pyreadline3==3.5.4 ; sys_platform == 'win32'", # FIXED: Windows only
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pywin32==311 ; sys_platform == 'win32'", # FIXED: Windows only
    "PyYAML==6.0.3",
    "pyzmq==27.1.0",
    "redis==7.1.0",
    "referencing==0.37.0",
    "regex==2025.11.3",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==14.2.0",
    "rpds-py==0.30.0",
    "rsa==4.9.1",
    "s3transfer==0.16.0",
    "sentry-sdk==2.48.0",
    "service-identity==24.2.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8",
    "SQLAlchemy==2.0.44",
    "sqlparse==0.5.4",
    "stack-data==0.6.3",
    "starlette==0.41.3",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "tiktoken==0.12.0",
    "tokenizers==0.22.1",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "Twisted==25.5.0",
    "txaio==25.12.1",
    "typeguard==4.4.4",
    "typer==0.20.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
    "ujson==5.11.0",
    "urllib3==2.6.0",
    "uvicorn==0.38.0",
    "vine==5.1.0",
    "watchfiles==1.1.1",
    "wcwidth==0.2.14",
    "websocket-client==1.9.0",
    "websockets==15.0.1",
    "wrapt==1.17.3",
    "yarl==1.22.0",
    "zipp==3.23.0",
    "zope.interface==8.1.1",
    "zstandard==0.23.0",
]